<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="12dp"
    android:paddingHorizontal="8dp">

    <TextView
        android:id="@+id/displayname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:text="@string/tag_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imported_value"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="47"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/imported_value"
        android:focusable="false"
        android:minHeight="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/copy_imported"
        app:layout_constraintTop_toBottomOf="@id/displayname" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/copy_imported"
        style="@style/MaterialIconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/copy_imported"
        app:icon="?attr/actionModeCopyDrawable"
        app:layout_constraintBottom_toTopOf="@id/reset_local"
        app:layout_constraintLeft_toRightOf="@id/imported_value"
        app:layout_constraintRight_toLeftOf="@id/local_value"
        app:layout_constraintTop_toBottomOf="@id/displayname" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reset_local"
        style="@style/MaterialIconButton.Outline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/reset_local_value"
        app:icon="@android:drawable/ic_menu_revert"
        app:layout_constraintBottom_toTopOf="@id/clear_local"
        app:layout_constraintLeft_toRightOf="@id/imported_value"
        app:layout_constraintRight_toLeftOf="@id/local_value"
        app:layout_constraintTop_toBottomOf="@id/copy_imported" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear_local"
        style="@style/MaterialIconButton.Outline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/clear_local_value"
        app:icon="@android:drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/imported_value"
        app:layout_constraintRight_toLeftOf="@id/local_value"
        app:layout_constraintTop_toBottomOf="@id/reset_local" />

    <ImageView
        android:id="@+id/local_value"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="47"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/local_value"
        android:minHeight="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintLeft_toRightOf="@id/reset_local"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/displayname" />


</androidx.constraintlayout.widget.ConstraintLayout>